# Agent-Workflow-Kit

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  base.py  registry.py
app/core/: config.py
app/schemas/: conversation.py  crew.py
app/services/: ai_provider.py  conversation_service.py  crew_service.py  workflow_export_service.py  workflow_service.py
app/tools/: __init__.py  base.py  registry.py
app/web/: app.js  index.html  styles.css
examples/agents/: additional_prompt_generator.json  baseball_analysis_agent.json  character_identity_resolver.json  character_prompt_generator.json  natural_language_editor.json  prompt_aggregator.json  prompt_compiler.json  prompt_consistency_validator.json  prompt_danbooru_query.json  prompt_format_optimizer.json  prompt_requirement_analyzer.json  prompt_semantic_repairer.json  prompt_target_renderer.json  prompt_writer.json  scene_document_editor.json  scene_document_processor.json  scene_prompt_generator.json  special_prompt_generator.json  visual_semantic_resolver.json
examples/workflows/: baseball_analysis_workflow.json  prompt_generation_workflow.json  research_pipeline.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  styles.css  types.ts
scripts/: generate_agent.py  generate_workflow.py
tests/agents/: test_baseball_analysis_agent.py
tests/api/: test_chat_e2e.py  test_conversation_api.py  test_web_ui.py  test_workflow_export_api.py
tests/scripts/: test_generate_agent.py  test_generate_workflow.py
(+162 files in other folders)
